added pettype endpoints
